// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpgradeButton should display with custom props 1`] = `
<div
  class="button-class"
>
  <a
    class="d-flex align-items-center upgradeLink"
    to="[object Object]"
  >
    <button
      class="upgradeButton sm invertedColors btn btn-outline-warning"
    >
      <span
        class="mr-2 upgradeLabel sm"
      >
        a label
      </span>
      <img
        alt="upgrade-icon"
        class="upgradeIcon sm"
        src="test-file-stub"
      />
    </button>
  </a>
</div>
`;

exports[`UpgradeButton should display with default props 1`] = `
<div
  class=""
>
  <a
    class="d-flex align-items-center upgradeLink"
    to="[object Object]"
  >
    <button
      class="upgradeButton btn btn-outline-warning"
    >
      <span
        class="mr-2 upgradeLabel"
      >
        Upgrade
      </span>
      <img
        alt="upgrade-icon"
        class="upgradeIcon"
        src="test-file-stub"
      />
    </button>
  </a>
</div>
`;
